--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      href="https://i.pinimg.com/200x/27/39/24/273924187b5f72ecb33655f41980dc13.jpg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alkatra&family=Kalam&family=Merienda:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Super Hero</title>
   </head>
   <body>
     <div class="main">
