--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <div class="main">
       <div class="container">
         <h1 id="names">Medusa</h1>
+        <div class="searchbar">
+          <input
+            type="text"
+            id="search"
+            placeholder="Enter a figure Name or Id"
+          /><button id="search-btn">Search</button>
+        </div>
+        <br />
         <div id="image">
           <img
             src="https://cdn.jsdelivr.net/gh/akabab/superhero-api@0.3.0/api/images/md/441-medusa.jpg"
